--- a/dev-ops/nginx/conf/conf.d/http.blog.conf
+++ b/dev-ops/nginx/conf/conf.d/http.blog.conf
@@ -4,7 +4,7 @@ server {
     server_name  puppet17.fun;
 
     location / {
-       root /usr/share/nginx/html;
+       root /nginx/nginx/html;
        index index.html;
     }
 
