build: update SSH deployment config and scripts for compatibility
- Migrate SSH key setup to use new path in GitHub Actions workflow.
- Update .gitignore to exclude IntelliJ project files.
- Refactor nginx configuration to point to correct HTML directory.
- Optimize module preload links in 404 HTML file.
- Ensure compatibility of deployment scripts with new structure.

BREAKING CHANGE: IntelliJ project files are now excluded from version
control. Update your local workspace accordingly.

	modified:   .github/workflows/main.yml
	modified:   .gitignore
	modified:   dev-ops/nginx/conf/conf.d/http.blog.conf
	modified:   dev-ops/nginx/html/404.html
	renamed:    dev-ops/nginx/html/assets/404.html-9f1ae0c5.js -> dev-ops/nginx/html/assets/404.html-e811df60.js
	renamed:    dev-ops/nginx/html/assets/app-3fb8dfc6.js -> dev-ops/nginx/html/assets/app-962821bb.js
	renamed:    dev-ops/nginx/html/assets/index.html-1818213b.js -> dev-ops/nginx/html/assets/index.html-91a47743.js
	renamed:    dev-ops/nginx/html/assets/index.html-6545736b.js -> dev-ops/nginx/html/assets/index.html-9786b355.js
	new file:   dev-ops/nginx/html/assets/index.html-9fd03a97.js
	deleted:    dev-ops/nginx/html/assets/index.html-d5ae4d1f.js
	renamed:    dev-ops/nginx/html/assets/index.html-219ffe00.js -> dev-ops/nginx/html/assets/index.html-d856920f.js
	deleted:    dev-ops/nginx/html/assets/index.html-dc099333.js
	new file:   dev-ops/nginx/html/assets/index.html-f5385850.js
	renamed:    dev-ops/nginx/html/assets/resume.html-6105d1b0.js -> dev-ops/nginx/html/assets/resume.html-20e169c8.js
	new file:   dev-ops/nginx/html/assets/resume.html-2975f4b5.js
	deleted:    dev-ops/nginx/html/assets/resume.html-55e56e07.js
	new file:   dev-ops/nginx/html/assets/slides.html-22928f04.js
	renamed:    dev-ops/nginx/html/assets/slides.html-e34692d4.js -> dev-ops/nginx/html/assets/slides.html-302e5b94.js
	deleted:    dev-ops/nginx/html/assets/slides.html-6f015ef1.js
	modified:   dev-ops/nginx/html/index.html
	modified:   dev-ops/

--- a/dev-ops/nginx/conf/conf.d/http.blog.conf
+++ b/dev-ops/nginx/conf/conf.d/http.blog.conf
@@ -4,7 +4,7 @@ server {
     server_name  puppet17.fun;
 
     location / {
-       root /nginx/nginx/html;
+       root /usr/share/nginx/html;
        index index.html;
     }
 
