--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
           node-version: '18.16.0'
 
       - name: Install dependencies
-        run: npm install -force
+        run: npm install
 
       - name: Build
         run: npm run docs:build
